# openclaw-facebook-marketplace

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
docs/: chatgpt-plan.md  guide.md
src/: agent.py  browser.py  colors.py  inspect_msg.py  main.py  messenger.py  prompt_parser.py  scorer.py  storage.py  vision.py
tests/: moondream_benchmark.py  test_pull_product_images.py  test_search.py  test_send_message.py
