[project]
name = "openclaw-facebook-marketplace"
version = "0.1.0"
description = "Autonomous agent that interacts with Facebook Marketplace via natural language prompts"
authors = [
    {name = "Matthew Miglio"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
